Fixed ellipsis not showing

--- a/app/styles/etherwallet-new.less
+++ b/app/styles/etherwallet-new.less
@@ -1135,9 +1135,7 @@ tbody tr:hover {
   width: 50%;
   overflow: hidden;
   -o-text-overflow: ellipsis;
-  text-overflow: unset;
   overflow: hidden;
-  display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
